src/components/Home/home.scss
@use 'src/styles/vars';

@keyframes moveCard {
  0% {
    transform: translateY(0);
    opacity: 0;
  }
  100% {
    transform: translateY(-274px);
    opacity: 1;
  }
}

.home {
  display: flex;
  flex-direction: column;
  // PREMIER CONTAINER
  .firstContainer {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    height: 100vh;
    color: white;
    background-image: url('../../assets/images/fondPlage.jpg');
    background-repeat: no-repeat;
    background-size: cover;
    background-position: center;
    .firstTitleGroup {
      display: flex;
      .firstTitle {
      font-family: 'Lora-Regular';
      text-transform: uppercase;
      font-size: 2rem;
      text-shadow: 2px 2px 1px rgba(0, 0, 0, 0.459);
    }
    }
    .secondText {
      font-size: 1.1rem;
      line-height: 1rem;
      text-shadow: 2px 2px 1px rgba(0, 0, 0, 0.459);
    }
  }
  // SECOND CONTAINER
  .secondContainer {
    display:flex;
    flex-direction: column;
    align-items: center;
    position: relative;
    .maskLeafBananier {
      position: absolute;
      overflow: hidden;
      width: 100%;
      height: 100%;
      z-index: -5;
      .leafBananier {
        position: absolute;
        width: 30rem;
        top: -90px;
        right: -60px;
        z-index: -1;
      }
    }
    .cardsHome {
      display:flex;
      flex-direction: column;
      justify-content: space-evenly;
      align-items: center;
      margin: 3em 0;
      .cardHome {
        margin: 3em;
        position: relative;
        display:flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
        background-color: vars.$secondary-color-dark;
        border-radius: 2vh;
        width: 13em;
        height: 9em;
        z-index: 2;
        .cardLogo {
          position: absolute;
          top: -60px;
          width: 8em;
        }
      }
      .textCard {
        font-family: 'SourceSansPro-SemiBoldItalic';
        text-align: center;
        color: white;
        font-size: 1.5em;
        padding: 1.2em;
      }
    }
    .firstBloc{
      display: flex;
      flex-direction: column;
      align-items: center;
      width: 100%; // a changer sur grand écran
      .containerSlide {
        width: 100%; // a changer sur grand écran
        .each-slide {
          display: flex;
          justify-content: center;
          overflow: hidden;
          width: 100%;
          .slideImage{
            // height: 550px;
            width: 100%;
          }
        }
      }
      .paragraphFirstBloc {
        display: flex;
        flex-direction: column;
        justify-content: space-between;
        padding: 2.5em 1.5em;
        line-height: 1.5em;
        .firstTextBloc {
          font-family: 'SourceSansPro-Bold';
          font-size: 1.5rem;
          color: vars.$secondary-color-dark;
          margin-bottom: 1em;
        }
        .secondTextBloc {
          font-family: 'SourceSansPro-LightItalic';
          font-size: 1.25rem;
          color: vars.$secondary-color-more-dark;
          margin-bottom: 1em;
        }
        .lastTextBloc {
          font-family: 'SourceSansPro-Light';
          font-size: 1.1rem;
          color: vars.$primary-color;
          margin-bottom: 2em;
        }
        .buttonBloc {
          width: 180px;
          font-family: 'SourceSansPro-Regular';
          font-size: 1.5rem;
          padding: 0.5em;
          color: vars.$secondary-color-dark;
          background-color: transparent;
          border: 3px solid vars.$secondary-color-dark;
          &:hover {
            background-color: vars.$secondary-color-dark;
            color: white;
            transition: .8s;
          }
        }
      }
    }
  }
  // TROISIEME CONTAINER
  .thirdContainer {
    display:flex;
    flex-direction: column;
    align-items: center;
    position: relative;
    .containerInfos {
      display: flex;
      flex-direction: column;
      justify-content: center;
      background-color: vars.$secondary-color-light;
      width: 100%;
      padding: 2.5em 1.5em;
      .titleInfo {
        font-family: 'Lora-Regular';
        font-size: 2rem;
        margin-bottom: 1em;
        text-align: center;
        color: vars.$primary-color;
      }
      .groupInfos {
        display: flex;
        flex-wrap: wrap;
        align-items: center;
        justify-content: space-between;
        height: 50vh;
        .cercleInfo {
          width: 10px;
          height: 10px;
          border-radius: 1vh;
          background-color: vars.$primary-color;
        }
        .oneInfo {
          display: flex;
          flex-direction: column;
          text-align: center;
          width: 47%;
          .logoInfo {
            height: 6em;
          }
          .oneTitleInfo {
            font-family: 'SourceSansPro-Bold';
            font-size: 1.6rem;
            text-transform: uppercase;
            color: vars.$secondary-color-dark;
            padding: .3em 0;
          }
          .oneTextInfo {
            font-family: 'SourceSansPro-Regular';
            font-size: 1.3rem;
            line-height: 1.2em;
            color: vars.$primary-color;
          }
        }
        
      }
    }
    .secondBloc{
      display: flex;
      flex-direction: column;
      align-items: center;
      width: 100%; // a changer sur grand écran
      .containerSlide {
        width: 100%; // a changer sur grand écran
        .each-slide {
          display: flex;
          justify-content: center;
          overflow: hidden;
          width: 100%;
          .slideImage{
            // height: 550px;
            width: 100%;
          }
        }
      }
      .paragraphSecondBloc {
        display: flex;
        flex-direction: column;
        justify-content: space-between;
        padding: 2.5em 1.5em;
        line-height: 1.5em;
        .secondTextBloc {
          font-family: 'SourceSansPro-Bold';
          font-size: 1.5rem;
          color: vars.$secondary-color-dark;
          margin-bottom: 1em;
          text-align: right;
        }
        .secondTextBloc2 {
          font-family: 'SourceSansPro-LightItalic';
          font-size: 1.25rem;
          color: vars.$secondary-color-more-dark;
          margin-bottom: 1em;
          text-align: right;
        }
        .lastTextBloc {
          font-family: 'SourceSansPro-Light';
          font-size: 1.1rem;
          color: vars.$primary-color;
          margin-bottom: 2em;
          text-align: right;
        }
        .buttonBloc {
          width: 180px;
          font-family: 'SourceSansPro-Regular';
          font-size: 1.5rem;
          padding: 0.5em;
          color: vars.$secondary-color-dark;
          background-color: transparent;
          border: 3px solid vars.$secondary-color-dark;
          &:hover {
            background-color: vars.$secondary-color-dark;
            color: white;
            transition: .8s;
          }
        }
        a {
          width: 180px;
          align-self: flex-end;
        }
      }
    }
  }
}

@media screen and (min-width:850px) {
  .home {
    .firstContainer {
      .firstTitleGroup {
        .firstTitle {
          font-size: 2.8rem;
        }
      }
      .secondText {
        font-size: 1.7rem;
        line-height: 2rem;
      }
    }
    .secondContainer {
      overflow: visible;
      .maskLeafBananier {
        z-index: -1;
        .leafBananier {
          width: 40rem;
          top: -100px;
          right: -80px;
        }
      }
      .cardsHome {
        display:flex;
        flex-direction: row;
        justify-content: space-evenly;
        margin: 0;
        width: 100%;
        .cardHome {
          position: relative;
          animation: 4s moveCard;
          bottom: -150px;
          animation-fill-mode: forwards;
          display:flex;
          flex-direction: column;
          justify-content: center;
          align-items: center;
          background-color: vars.$secondary-color-dark;
          border-radius: 2vh;
          min-width:13em;
          height: 9em;
          .cardLogo {
            position: absolute;
            top: -60px;
            width: 8em;
          }
        }
        .textCard {
          font-family: 'SourceSansPro-SemiBoldItalic';
          text-align: center;
          color: white;
          font-size: 1.5em;
          padding: 1.2em;
        }
      }
      .firstBloc{
        display: flex;
        flex-direction: row;
        align-items: center;
        justify-content: center;
        margin-bottom: 8em;
        width: 70%;
        .slideImage{
          height: 550px;
          width: auto!important;
        }
        .containerSlide {
          max-width:50%;
        }
        .paragraphFirstBloc {
          padding: 3.5em 2em;
        }
      }
    }
    .thirdContainer {
      .blocBananier {
        position: absolute;
        overflow: hidden;
        width: 100%;
        height: 100%;
        z-index: -5;
        .Bananier {
          position: absolute;
          height: 60%;
          bottom: -20px;
          left: -50px;
          z-index: -1;
        }
      }
      .secondBloc{
        display: flex;
        flex-direction: row-reverse;
        align-items: center;
        justify-content: center;
        width: 70%;
        margin: 8em 0;
        .slideImage{
          height: 550px;
          width: auto!important;
        }
        .containerSlide {
          max-width:50%;
        }
        .paragraphSecondBloc {
          padding: 3.5em 2em;
        }
      }
      .containerInfos {
        display: flex;
        flex-direction: column;
        justify-content: center;
        background-color: vars.$secondary-color-light;
        width: 100%;
        height: 100%;
        padding: 2.5em 1.5em;
        .titleInfo {
          font-family: 'Lora-Regular';
          font-size: 2rem;
          margin-bottom: 1em;
          text-align: center;
          color: vars.$primary-color;
        }
        .groupInfos {
          justify-content: center;
          height: 25vh;
          .cercleInfoMiddle {
            width: 10px;
            height: 10px;
            border-radius: 1vh;
            background-color: vars.$primary-color;
          }
          .oneInfo {
            width: 20%;
          }
        }
      }
    }
  }
}

@media screen and (max-width:550px) {
  .home {
    .firstContainer {
      .firstTitleGroup {
        .firstTitle {
          font-size: 1.4rem;
          text-align: center;
        }
      }
      .secondText {
        font-size: 1rem;
        text-align: center;
      }
    }
  }
}

@media screen and (max-width:375px) {
  .home {
    .firstContainer {
      .firstTitleGroup {
        .firstTitle {
          font-size: 1.2rem;
        }
      }
    }
  }
}

@media screen and (min-width:2560px) {
  .home {
    .firstContainer {
      .firstTitleGroup {
        .firstTitle {
          font-size: 4rem!important;
        }
      }
      .secondText {
        font-size: 2.5rem!important;
      }
    }
    .secondContainer {
      .firstBloc{
        width: 60%;
        .react-slideshow-container {
          width: 95%!important;
        }
      }
    }
    .thirdContainer {
      .secondBloc{
        width: 60%;
        .react-slideshow-container {
          width: 95%!important;
        }
      }
    }
  }
}

